<resources>
    <string name="app_name">HIAS</string>
    <!-- Strings related to login -->
    <string name="prompt_server">Server</string>
    <string name="prompt_username">Public Key</string>
    <string name="prompt_password">Private Key</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! Please enter your HIAS credentials to continue."</string>
    <string name="invalid_server">Not a valid HIAS server</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server">HIAS Server URL</string>
    <string name="pubKey">Public Key</string>
    <string name="prvKey">Private Key</string>
    <string name="uInput">Type a message to GeniSys</string>
    <string name="nlu_send">Send</string>
    <string name="nlu_help">You can talk to me by clicking on the microphone and speaking or by typing a message</string>
</resources>
